# app/docs/swagger.json
@@ -3714,11 +3714,6 @@
                     },
                     {
                         "type": "string",
-                        "name": "roleKey",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
                         "name": "roleName",
                         "in": "query"
                     },
@@ -3844,6 +3839,80 @@
                         "description": "成功",
                         "schema": {
                             "$ref": "#/definitions/response.ResponseData"
+                        }
+                    }
+                }
+            }
+        },
+        "/system/selectBox/dept": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "部门选择框",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "下拉框选项"
+                ],
+                "summary": "部门选择框",
+                "responses": {
+                    "200": {
+                        "description": "成功",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/response.ResponseData"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/systemModels.SelectPermission"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
+        "/system/selectBox/permission": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "权限选择框",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "下拉框选项"
+                ],
+                "summary": "权限选择框",
+                "responses": {
+                    "200": {
+                        "description": "成功",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/response.ResponseData"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/systemModels.SelectPermission"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     }
                 }
@@ -4959,7 +5028,7 @@
                     "description": "角色",
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/systemModels.SysRoleVo"
+                        "$ref": "#/definitions/systemModels.SysRoleIdAndName"
                     }
                 }
             }
@@ -5112,6 +5181,22 @@
                     "items": {
                         "$ref": "#/definitions/systemModels.SysDeptVo"
                     }
+                }
+            }
+        },
+        "systemModels.SelectPermission": {
+            "type": "object",
+            "properties": {
+                "parentId": {
+                    "type": "string",
+                    "example": "0"
+                },
+                "permissionId": {
+                    "type": "string",
+                    "example": "0"
+                },
+                "permissionName": {
+                    "type": "string"
                 }
             }
         },
@@ -5334,7 +5419,6 @@
         "systemModels.SysPermissionAdd": {
             "type": "object",
             "required": [
-                "parentId",
                 "permission"
             ],
             "properties": {
@@ -5529,16 +5613,16 @@
                     "description": "创建时间",
                     "type": "string"
                 },
-                "menuIds": {
+                "delFlag": {
+                    "type": "string"
+                },
+                "permissionIds": {
                     "type": "array",
                     "items": {
                         "type": "string"
                     }
                 },
                 "remark": {
-                    "type": "string"
-                },
-                "roleKey": {
                     "type": "string"
                 },
                 "roleName": {
@@ -5560,6 +5644,18 @@
                 }
             }
         },
+        "systemModels.SysRoleIdAndName": {
+            "type": "object",
+            "properties": {
+                "roleId": {
+                    "type": "string",
+                    "example": "0"
+                },
+                "roleName": {
+                    "type": "string"
+                }
+            }
+        },
         "systemModels.SysRoleVo": {
             "type": "object",
             "properties": {
@@ -5571,8 +5667,11 @@
                     "description": "创建时间",
                     "type": "string"
                 },
-                "delFlag": {
-                    "type": "string"
+                "permissionIds": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 },
                 "remark": {
                     "type": "string"
@@ -5580,9 +5679,6 @@
                 "roleId": {
                     "type": "string",
                     "example": "0"
-                },
-                "roleKey": {
-                    "type": "string"
                 },
                 "roleName": {
                     "type": "string"
@@ -5770,9 +5866,6 @@
                 "remark": {
                     "type": "string"
                 },
-                "roleId": {
-                    "type": "integer"
-                },
                 "sex": {
                     "type": "string"
                 },
@@ -5842,7 +5935,7 @@
                     "description": "角色",
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/systemModels.SysRoleVo"
+                        "$ref": "#/definitions/systemModels.SysRoleIdAndName"
                     }
                 },
                 "user": {
